// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container uui-checkbox-container root size-18 mode-form -clickable"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container uui-checkbox-container root size-18 mode-form -clickable"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should be rendered correctly with props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container uui-checkbox-container root size-18 mode-form uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={-1}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container uui-checkbox-container root size-18 mode-form uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={-1}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;
